--- a/handsontable.css
+++ b/handsontable.css
@@ -1,9 +1,9 @@
 /*!
  * (The MIT License)
- * 
+ *
  * Copyright (c) 2012-2014 Marcin Warpechowski
  * Copyright (c) 2015 Handsoncode sp. z o.o. <hello@handsoncode.net>
- * 
+ *
  * Permission is hereby granted, free of charge, to any person obtaining
  * a copy of this software and associated documentation files (the
  * 'Software'), to deal in the Software without restriction, including
@@ -11,10 +11,10 @@
  * distribute, sublicense, and/or sell copies of the Software, and to
  * permit persons to whom the Software is furnished to do so, subject to
  * the following conditions:
- * 
+ *
  * The above copyright notice and this permission notice shall be
  * included in all copies or substantial portions of the Software.
- * 
+ *
  * THE SOFTWARE IS PROVIDED 'AS IS', WITHOUT WARRANTY OF ANY KIND,
  * EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
  * MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
@@ -22,7 +22,7 @@
  * CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
  * TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
  * SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
- * 
+ *
  * Version: 0.34.4
  * Date: Wed Sep 13 2017 19:59:28 GMT+0800 (CST)
  */
@@ -268,11 +268,13 @@
 }
 
 #hot-display-license-info {
-  font-size: 9px;
-  color: #323232 ;
-  padding: 5px 0 3px 0;
-  font-family: Helvetica, Arial, sans-serif;
-  text-align: left;
+  // font-size: 9px;
+  // color: #323232 ;
+  // padding: 5px 0 3px 0;
+  // font-family: Helvetica, Arial, sans-serif;
+  // text-align: left;
+  font-size: 0;
+  display: none;
 }
 
 /* plugins */
